fixed the size of the header (was wrapping on mobile)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,7 @@ body {
     display: block;
     margin: 0 auto;
 }
+
+.brand-logo {
+    font-size: 1.5rem!important;
+}
